Overlap issue

--- a/src/components/hero1/hero1.module.css
+++ b/src/components/hero1/hero1.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     margin: 10px;
+    margin-top: 40px;
     height: 400px;
     flex-direction: row;
     align-items: flex-end;
